--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "reac": "^0.0.0",
