--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "17.x || 18.x",
+      "react-dom": "17.x || 18.x"
+    }
   }
 }
