--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme": "^3.3.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
