--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "reac": "^0.0.0",
     "react": "^18",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@types/node": "^20",
