--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.6",
     "reac": "^0.0.0",
     "react": "^18",
     "react-dom": "^18.2.0",
