--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@chakra-ui/theme": "^3.3.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/supabase-js": "^2.39.7",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
