--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.2",
     "uuid": "^9.0.1"
   },
