--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.7",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "device-detector-js": "^3.0.3",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "nextjs-toploader": "^1.6.6",
